--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-source-datocms": "^2.6.16",
     "gatsby-source-filesystem": "^3.8.0",
+    "gatsby-source-instagram": "^0.9.0",
     "gatsby-transformer-sharp": "^3.8.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
