--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@cross.team/gatsby-theme-material-ui": "^1.1.0",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
     "browser-sync": "^2.27.4",
     "dotenv": "^8.6.0",
     "find-config": "^1.0.0",
     "gatsby": "^3.8.1",
     "gatsby-plugin-gatsby-cloud": "^2.8.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^3.8.0",
     "gatsby-plugin-offline": "^4.8.0",
@@ -19,6 +23,7 @@
     "gatsby-source-datocms": "^2.6.16",
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-source-instagram": "^0.9.0",
+    "gatsby-theme-material-ui": "^2.0.1",
     "gatsby-transformer-sharp": "^3.8.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
