--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-manifest": "^3.8.0",
     "gatsby-plugin-offline": "^4.8.0",
     "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-react-leaflet": "^3.0.2",
     "gatsby-plugin-sass": "^4.9.0",
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-source-datocms": "^2.6.16",
@@ -25,10 +26,12 @@
     "gatsby-source-instagram": "^0.9.0",
     "gatsby-theme-material-ui": "^2.0.1",
     "gatsby-transformer-sharp": "^3.8.0",
+    "leaflet": "^1.7.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-leaflet": "^3.2.0",
     "sass": "^1.35.1"
   },
   "devDependencies": {
